--- a/src/main/resources/my.properties
+++ b/src/main/resources/my.properties
@@ -2,3 +2,5 @@ baseUrl = https://api.spoonacular.com
 apiKey = 22915bcd282e45eeb0076e0bf424fc48
 complexSearch = /recipes/complexSearch
 recipesCuisine = /recipes/cuisine
+postShopListBody = {"item": "Salt","aisle": "Baking","parse": true}
+hash = ae1601c7aa1c1fed74aae55c06c9c8300ff3d336
